--- a/.gitmodules
+++ b/.gitmodules
@@ -421,3 +421,6 @@
 [submodule "white-house-adventure"]
 	path = white-house-adventure
 	url = https://github.com/forslund/white-house-adventure.git
+[submodule "spotify-cli"]
+	path = spotify-cli
+	url = https://gitlab.com/my-reactivity/spotify-cli-skill.git
